--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
 
 </head>
 <body>
-<h1>Зинченко Ян Витальевич</h1>
+<div class="wrapper">
+  <h1>Зинченко Ян Витальевич</h1>
 
   <figure class="fig">
-   <img src="img/Yan.jpg" width="500" height="300" 
-   alt="Its me">
+    <img src="img/Yan.jpg" width="500" height="300" alt="Its me">
     <figcaption>
    Студент заборостроительного университета
-   </figcaption>
-   </figure>
+    </figcaption>
+  </figure>
 
+  <hr>
 
- <hr>
-
-<p>Хочу учить фронтенд, потому что:</p>
+  <p>Хочу учить фронтенд, потому что:</p>
    <ul>
     <li>Заборы строить не интересно</li>
     <li>Платят мало</li>
@@ -40,20 +39,19 @@
    </ul>
 
   <hr>
-<p>Мой контактный телефон</p>
-<p>+380222222222</p>
+
+  <p>Мой контактный телефон</p>
+  <p>+380222222222</p>
+
+  <p class="prof">Мой профиль в вконтакте</p>
+  <a href="">vk.com</a>
+
+  <hr>
+
+  <p>Мой фидбок</p>
+  <p>Если надо могу построить  вам забор</p>
+ </div>
 
 
-
-<p class="prof">Мой профиль в вконтакте</p>
-<a href="">vk.com</a>
-
-
- <hr>
-
- <p>Мой фидбок</p>
-<p>Если надо могу построить  вам забор</p>
-
-<script src=""></script>
 </body>
 </html>
